--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -52,6 +52,8 @@ $fiftieth-color: #ff7212;
 $fifty-first-color: #d1d1d1;
 $fifty-second-color: #fedbd7;
 $fifty-third-color: #fff1f0;
+$fifty-fourth-color: #ff0000;
+$fifty-fifth-color: #f1f1f1;
 
 * {
    margin: 0;
