--- a/src/components/SectionWrapper/SectionWrapper.module.scss
+++ b/src/components/SectionWrapper/SectionWrapper.module.scss
@@ -8,6 +8,7 @@
 
 .title-primary {
    color: black;
+   width: 100%;
    background: linear-gradient(to bottom, #f2d9d4, #fff);
    border: 1px solid $tertiary-color;
    border-bottom-width: 0;
