--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -54,6 +54,8 @@ $fifty-second-color: #fedbd7;
 $fifty-third-color: #fff1f0;
 $fifty-fourth-color: #ff0000;
 $fifty-fifth-color: #f1f1f1;
+$fifty-sixth-color: #3b3b3b;
+$fifty-seventh-color: #ffc2d4;
 
 * {
    margin: 0;
