--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -50,6 +50,7 @@
 
 .primary {
    padding: 8px 11.2px;
+   font-size: inherit;
    color: white;
    background-color: $eleventh-color;
 
@@ -60,6 +61,7 @@
 
 .secondary {
    padding: 8px;
+   font-size: inherit;
    color: $forty-fifth-color;
    background-color: $nonary-color;
 
@@ -70,6 +72,7 @@
 
 .tertiary {
    padding: 8px 10px;
+   font-size: inherit;
    color: white;
    background-color: $forty-seventh-color;
 
@@ -80,6 +83,7 @@
 
 .quaternary {
    padding: 8px 10px;
+   font-size: inherit;
    color: white;
    background-color: $thirtieth-color;
 
@@ -90,6 +94,7 @@
 
 .quinary {
    padding: 6.4px 11.2px;
+   font-size: inherit;
    color: $twenty-sixth-color;
    background-color: $forty-fourth-color;
 
@@ -100,11 +105,33 @@
 
 .senary {
    padding: 8px 11.2px;
+   font-size: inherit;
    color: white;
    background: $quaternary-color;
 
    &:hover {
       background: linear-gradient(to bottom, #b21e02, #b21e02, #b93016, #b21e02, #b21e02);
+   }
+}
+
+.septenary {
+   padding: 8px 11.2px;
+   font-size: inherit;
+   color: $twenty-third-color;
+   background: linear-gradient(to bottom, #b21e02, #b21e02, #b93016, #b21e02, #b21e02);
+
+   &:hover {
+      color: white;
+   }
+
+   .left-icon,
+   .right-icon {
+      color: $denary-color;
+   }
+
+   &:hover .left-icon,
+   &:hover .right-icon {
+      color: $fifty-seventh-color;
    }
 }
 
