Responsive for Select, Checkout, Cart, AccountManagement, Header, OrderNav, reactHookFormSchema, UserDetailsForm, ChangePasswordForm, CartTable, and CheckoutTable modules

--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,3 +1,11 @@
 .table-title {
    background: linear-gradient(to bottom, #cbcbcb, #dfdfdf, #cbcbcb);
 }
+
+@media (max-width: 767px) {
+   .wrapper {
+      .select {
+         width: 100%;
+      }
+   }
+}
