--- a/src/pages/Cart/components/CartTable/CartTable.module.scss
+++ b/src/pages/Cart/components/CartTable/CartTable.module.scss
@@ -14,3 +14,38 @@ $border-width: 1px;
 .td {
    border-right: $border-width solid $thirty-eighth-color;
 }
+
+.code,
+.name {
+   text-overflow: ellipsis;
+   text-wrap: nowrap;
+   overflow: hidden;
+}
+
+@media (max-width: 1400px) {
+   .wrapper {
+      .hide-1400 {
+         display: none;
+      }
+   }
+}
+
+@media (max-width: 992px) {
+   .wrapper {
+      .hide-992 {
+         display: none;
+      }
+   }
+}
+
+@media (max-width: 767px) {
+   .wrapper {
+      .hide-767 {
+         display: none;
+      }
+
+      .td-767 {
+         border-right: $border-width solid $thirty-eighth-color;
+      }
+   }
+}
