--- a/src/pages/Cart/components/CartTableItem/CartTableItem.module.scss
+++ b/src/pages/Cart/components/CartTableItem/CartTableItem.module.scss
@@ -10,3 +10,35 @@ $border-width: 1px;
 .td {
    border-right: $border-width solid $thirty-eighth-color;
 }
+
+.order-summary {
+   display: none;
+}
+
+@media (max-width: 1400px) {
+   .wrapper {
+      .hide-1400 {
+         display: none;
+      }
+   }
+}
+
+@media (max-width: 992px) {
+   .wrapper {
+      .hide-992 {
+         display: none;
+      }
+   }
+}
+
+@media (max-width: 767px) {
+   .wrapper {
+      .hide-767 {
+         display: none;
+      }
+
+      .order-summary {
+         display: block;
+      }
+   }
+}
