--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -7,5 +7,25 @@
       .select {
          width: 100%;
       }
+
+      .project-wrapper {
+         flex-direction: column-reverse;
+         align-items: start;
+      }
+   }
+}
+
+@media (max-width: 575px) {
+   .wrapper {
+      .project-wrapper-right {
+         flex-direction: column;
+         align-items: stretch;
+         width: 100%;
+         gap: 4.8px;
+
+         .input-wrapper-main {
+            margin-right: 0;
+         }
+      }
    }
 }
