--- a/src/pages/Cart/components/CartTableItem/CartTableItem.module.scss
+++ b/src/pages/Cart/components/CartTableItem/CartTableItem.module.scss
@@ -11,10 +11,6 @@ $border-width: 1px;
    border-right: $border-width solid $thirty-eighth-color;
 }
 
-.order-summary {
-   display: none;
-}
-
 @media (max-width: 1400px) {
    .wrapper {
       .hide-1400 {
@@ -37,7 +33,7 @@ $border-width: 1px;
          display: none;
       }
 
-      .order-summary {
+      .show-767 {
          display: block;
       }
    }
